--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Brave medium's todo</title>
     <!-- font awesome  -->
     <script
       src="https://kit.fontawesome.com/8f43bae13d.js"
