--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brave medium's todo</title>
+    <title>Brave-medium todo</title>
     <!-- favicon -->
     <link
       rel="apple-touch-icon"
@@ -35,7 +35,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="heading">Brave medium's todo</h1>
+      <h1 class="heading">Brave medium todo</h1>
 
       <!--  -->
       <div class="action-box">
